[package]
name = "arbitrum-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Configuration management for Arbitrum-Reth"

[dependencies]
eyre.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
