[package]
name = "arbitrum-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Node for Arbitrum-Reth"

[package.metadata.cargo-machete]
ignored = [
    "reth-primitives",
    "reth-provider",
    "reth-tasks",
]

[dependencies]
# Core dependencies (alphabetical)
alloy-primitives.workspace = true
arbitrum-batch-submitter.workspace = true
arbitrum-config.workspace = true
arbitrum-consensus.workspace = true
arbitrum-inbox-tracker.workspace = true
arbitrum-pool.workspace = true
arbitrum-storage.workspace = true
arbitrum-validator.workspace = true
axum = { version = "0.7", default-features = false, features = [
    "json",
    "macros",
    "http1",
    "tokio",
] }
chrono.workspace = true
eyre.workspace = true
futures = "0.3"
hex = "0.4"
# Reth SDK
reth-chainspec = { workspace = true }
reth-ethereum = { workspace = true }
reth-node-builder = { workspace = true }
reth-primitives = { workspace = true }
reth-provider = { workspace = true }
reth-tasks = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
http = "0.2"
hyper = { version = "0.14", features = ["http1", "tcp", "client", "http2"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "http2",
    "rustls-tls",
] }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] }

[features]
# Experimental: switch the Reth integration from the axum mock to a real NodeBuilder wiring.
# Off by default to keep CI/tests stable while we iterate.
experimental-reth = []
