[package]
name = "arbitrum-pool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Transaction pool for Arbitrum-Reth"

[dependencies]
alloy-primitives.workspace = true
arbitrum-config.workspace = true
# arbitrum-consensus.workspace = true  # Removed: not used
arbitrum-storage.workspace = true
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
