[package]
name = "arbitrum-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Storage layer for Arbitrum-Reth"

[dependencies]
alloy-primitives.workspace = true
arbitrum-config.workspace = true
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

# Database - using heed instead of mdbx for better Rust support
heed = { workspace = true }

# Serialization
bincode = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
